# protein_money_time

./: .env.noemie  .gitattributes  .gitignore  LICENSE  README.md  app.py  azure-old.yaml  azure-pipelines.yml  azure.yaml  config.py  pyproject.toml  requirements.txt  run.py  wsgi.py
IFCD0210/: app.py  app_test.py  azd_debugging.txt  brands.csv  config.py  connect.py  countries.csv  currencies.csv  junction_currency_country.csv  not_yet.sql  prices.csv  production.py  products.csv  queries.sql  schema.sql  seed.sql
IFCD0210/templates/: index.html  protein.html  vitamin.html
app/: __init__.py  extensions.py
app/db/: ROSSconnection.py  brands.csv  connection.py  countries.csv  currencies.csv  junction_currency_country.csv  prices.csv  products.csv  queries.sql  schema.sql  seed.sql
app/forms/: auth_forms.py
app/models/: user.py
app/routes/: auth.py  inserts.py  main.py  presave.py  presaveOLD.py  presaved.py  price_insert.py  product_insert.py  pyproject.toml
app/static/js/: api-search.js  base.js  form-validation.js
app/static/style/: style.css
app/templates/: base.html
app/templates/auth/: login.html  register.html
app/templates/inserts/: price_insert.html  product_insert.html
infra/: resources.bicep
s_k/: __init__.py  pages.py
s_k/templates/: about.html  base.html  index.html
scraping/: CremaLotus.xlsx  currencies.csv
scraping/BIGdataTryOpenWith_hexfiend_OR_dadroit/: Dadroit - Google Search.html  Hex Fiend, a fast and clever hex editor for macOS.html  json vs jsonl - Google Search.html
scraping/kaggle/: kaggle_sources.py
(+29 files in other folders)
